-fixed weird list -wrapped <li> elements in <ul> for increased accessibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -291,6 +291,10 @@ nav li a:hover{
     color: rgb(213, 245, 204);
     text-decoration:underline;
 }
+.about_body ul{
+    padding: 0;
+    margin: 0;
+}
 @media (max-width: 1700px) {
     .about_hero_body{
     width: 90vw;
